  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.1.4b1 - 2019-01-28
----------------------------
* FIX: SuRun's "H.I.P.S. Warning" Window did not show on user's desktop

SuRun 1.2.1.3 - 2019-01-28
----------------------------
* Released 1.2.1.3

SuRun 1.2.1.3rc1 - 2017-10-23
----------------------------
* CHG: Made Hooks Windows 10 1709 compatible.

SuRun 1.2.1.3b3 - 2017-08-20
----------------------------
* NEW: SuRun detects renamed computer and imports user's settings
* FIX: User Bitmaps for Domain Users were not shown

SuRun 1.2.1.3b2 - 2017-08-09
----------------------------
* NEW: Moderated Restricted Surunners. ("User can only run predefined programs 
			 with elevated rights")
	     If a restricted SuRunner tries to run a non validated Programm with 
	     elevated rights, SuRun will now ask for Administrator credentials to 
	     launch the program elevated in the user's context.
* FIX: Fixed Spanish Resources

SuRun 1.2.1.3b1 - 2017-03-11
----------------------------
* NEW: SuRun Executables are digitally signed
* CHG: Changed SuRun's Context Menu Strings from "<...>" to "SuRun: <...>"
* FIX: Members of "Power Users" and "Backup Opeators" could not use SuRun
* FIX: Bug in IAT-Hooks made Internet Explorer Crash on Windows 10

SuRun 1.2.1.2 - 2015-08-09
----------------------------
* CHG: Made Hooks Windows X compatible.

SuRun 1.2.1.1 - 2015-02-15
----------------------------
* NEW: Option to hide SuRun's "green smiley" tray icon
* NEW: Support for Windows 8 and Windows 8.1
* CHG: Option "remember password" in RunAs-Dialog is grayed out when SuRun 
       always asks for the user's password
* CHG: In Windows Vista and later SuRun does not modify registry settings for 
       UAC "Run as administrator". 