@@ -33,6 +33,7 @@ SuRun Changes:
 SuRun 1.2.1.4b1 - 2019-01-28
 ----------------------------
 * FIX: SuRun's "H.I.P.S. Warning" Window did not show on user's desktop
+* FIX: GetEffectiveRightsFromAcl BUGs in Windows 10 1809, replaced the function
 
 SuRun 1.2.1.3 - 2019-01-28
 ----------------------------
